--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "node-sass": "^4.9.4",
     "npm-check": "^5.9.0",
     "npx": "^10.2.0",
+    "nucleus-styleguide": "^1.1.1",
     "path": "^0.12.7",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^12.0.1",
@@ -115,7 +116,7 @@
     "sass-loader": "^7.1.0",
     "script-loader": "^0.7.2",
     "style-loader": "^0.23.1",
-    "stylelint": "^9.7.1",
+    "stylelint": "^9.8.0",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-config-recommended-scss": "^3.2.0",
     "stylelint-config-standard": "^18.2.0",
