--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "hammerjs": "^2.0.8",
     "html5shiv": "^3.7.3",
     "lodash": "^4.17.11",
+    "material-design-icons": "^3.0.1",
     "mdi": "^2.2.43",
     "mobile-detect": "^1.4.3",
     "normalize.css": "^8.0.0",
