--- a/config/packages/sensio_framework_extra.yaml
+++ b/config/packages/sensio_framework_extra.yaml
@@ -2,7 +2,7 @@
 # https://symfony.com/doc/current/bundles/SensioFrameworkExtraBundle/index.html
 sensio_framework_extra:
   router:
-    annotations: true
+    annotations: false
   request:
     converters: true
     auto_convert: true
